--- a/projvacina/public/Assets/Painel/css/acl-painel.css
+++ b/projvacina/public/Assets/Painel/css/acl-painel.css
@@ -3,7 +3,7 @@
     margin-top: 28px;
 }
 .menu{
-    background: rgba(28, 72, 70, 0.87);
+    background: rgba(47, 0, 255, 0.719);
     margin: 0px;
     padding: 0px;
 }
@@ -17,7 +17,7 @@ ul.menu li{
     /* display: inline; */
     text-align: center;
 }
-ul.menu li a{}
+/*ul.menu li a{};*/
 ul.menu li h1{
     font-size: 18px;
     margin: 4px;
@@ -26,6 +26,12 @@ ul.menu li h1{
 }
 img.img-menu{
     max-width: 100px;
+}
+img.img-submenu{
+    border: 1px solid rgba(28, 72, 70, 0.87); 
+    padding: 10px 10px; 
+    border-radius: 1px;
+    max-width: 80px;
 }
 a:hover{text-decoration: none;}
 
@@ -48,7 +54,7 @@ form.form-search{
     margin: 10px;
 }
 
-div.relatorios{}
+/*div.relatorios{}*/
 ul.relatorios{
     float: left;
     width: 100%;
@@ -56,7 +62,7 @@ ul.relatorios{
     margin: 39px 0px;
 }
 ul.relatorios li a{
-    background: rgba(28, 72, 70, 0.87);
+    background: rgba(59, 0, 253, 0.486);
     margin: 14px 0px;
     float: left;
     width: 100%;
@@ -87,6 +93,12 @@ h1.title{
     color: #395F5D;
     font-size: 24px;
     font-weight: bold;
+}
+h1.subtitle{
+    color: rgb(255, 255, 255);
+    font-size: 12px;
+    text-align: center;
+    
 }
 
 p.footer{margin: 5px;color: #FFF;font-weight: bold;}
