--- a/projvacina/public/Assets/Painel/css/acl-painel.css
+++ b/projvacina/public/Assets/Painel/css/acl-painel.css
@@ -1,6 +1,8 @@
 .logo{
-    width: 100%;
-    margin-top: 28px;
+    width: 150%;
+    
+    margin: 40px;
+    
 }
 .menu{
     background: rgba(47, 0, 255, 0.719);
@@ -10,6 +12,7 @@
 ul.menu{
     list-style: none;
     width: 100%;
+    height: 50%;
     margin: 0px;
     padding: 12px;
 }
@@ -25,10 +28,10 @@ ul.menu li h1{
     font-weight: bold;
 }
 img.img-menu{
-    max-width: 100px;
+    max-width: 50px;
 }
 img.img-submenu{
-    border: 1px solid rgba(28, 72, 70, 0.87); 
+    border: 1px solid rgba(10, 23, 207, 0.596); 
     padding: 10px 10px; 
     border-radius: 1px;
     max-width: 80px;
@@ -39,10 +42,10 @@ a:hover{text-decoration: none;}
 
 
 .actions{
-    background: #579491;
+    background: #3008e4;
 }
 a.add{
-    background: rgba(28, 72, 70, 0.87);
+    background: rgba(9, 13, 236, 0.63);
     padding: 12px;
     float: left;
     margin: 5px;
@@ -57,20 +60,26 @@ form.form-search{
 /*div.relatorios{}*/
 ul.relatorios{
     float: left;
+    
     width: 100%;
     list-style: none;
     margin: 39px 0px;
 }
 ul.relatorios li a{
-    background: rgba(59, 0, 253, 0.486);
+    background: rgba(253, 0, 0, 0.801);
     margin: 14px 0px;
     float: left;
+    
+
     width: 100%;
     padding: 14px;
 }
 ul.relatorios li h1{
     color: #FFF;
-    font-size: 16px;
+    font-size: 26px;
+    border: 1px;
+    border-color: #FFF;
+
 }
 
 
@@ -94,12 +103,14 @@ h1.title{
     font-size: 24px;
     font-weight: bold;
 }
+
 h1.subtitle{
     color: rgb(255, 255, 255);
     font-size: 12px;
     text-align: center;
     
 }
+
 
 p.footer{margin: 5px;color: #FFF;font-weight: bold;}
 
@@ -118,7 +129,12 @@ form.login{
     padding: 10px;
     background: rgba(28, 72, 70, 0.87);
 }
-img.logo-login{max-width: 150px;}
+img.logo-login{max-width: 200px;
+margin-top: 12.5%;
+}
+img.logo-login2{max-width: 200px;
+   
+    }
 form.login input{
     border-radius: 0px;
     height: 50px;
