--- a/projvacina/public/Assets/Painel/css/acl-painel.css
+++ b/projvacina/public/Assets/Painel/css/acl-painel.css
@@ -1,3 +1,5 @@
+
+
 .logo{
     width: 150%;
     
@@ -61,24 +63,25 @@ form.form-search{
 /*div.relatorios{}*/
 ul.relatorios{
     float: left;
-    
+  
     width: 90%;
     list-style: none;
-    margin: 39px 0px;
+    margin: 10px 10px 10px;
 }
 ul.relatorios li a{
     background: rgba(253, 0, 0, 0.657);
-    margin: 20px 40px;
-    float: left;    
-    width: 90%;
-    padding: 10px;
+    margin: 30px 70px ;
+    float: left;
+       
+    width: 70%;
+    padding: 0px;
     border: 3px solid rgba(255, 0, 0, 0.267);
-    border-radius: 90px;
+    border-radius: 30px;
     
 }
 ul.relatorios li h1{
     color: #FFF;
-    font-size: 26px;
+    font-size: 20px;
     border: 3px;
     border-color: rgb(50, 0, 97);
 
@@ -144,3 +147,4 @@ form.login input{
 }
 .btn-login{background: rgba(28, 72, 70, 0.87);width: 100%;color: #FFF !important;font-weight: bold;font-size: 18px;}
 a.recuperar{color: rgba(28, 72, 70, 0.87);}
+
