--- a/projvacina/public/Assets/Painel/css/acl-painel.css
+++ b/projvacina/public/Assets/Painel/css/acl-painel.css
@@ -86,17 +86,25 @@ ul.relatorios li h1{
     border-color: rgb(50, 0, 97);
 
 }
+p1{
+    color: rgb(255, 255, 255);
+    font-size: 12px;
+    border: 3px;
+    border-color: rgb(255, 0, 0);
+
+}
+
 
 
 .edit{
-    background: #5A1F17;
+    background: rgba(90, 31, 23, 0.829);
     padding: 8px;
     color: #FFF;
     border-radius: 4px;
     margin: 4px;
 }
 .delete{
-    background: #D21800;
+    background: rgba(224, 26, 0, 0.87);
     padding: 8px 10px;
     color: #FFF;
     border-radius: 4px;
