--- a/projvacina/public/Assets/Painel/css/acl-painel.css
+++ b/projvacina/public/Assets/Painel/css/acl-painel.css
@@ -262,26 +262,36 @@ p1{
 
 }
 
-
-
+/* Botão de editar */
 .edit{
-    background: rgba(90, 31, 23, 0.829);
-    padding: 8px;
+    background: rgba(2, 175, 175, 0.733);
+    /* Top, right, botton, left */
+    padding: 5px 0.5px 6px 7px;
+    margin: 5px;
     color: #FFF;
     border-radius: 4px;
-    margin: 4px;
 }
+
+/* Botão de remover */
 .delete{
     background: rgba(224, 26, 0, 0.87);
-    padding: 8px 10px;
+    padding: 2px 7px 2px 7px;
     color: #FFF;
+    border-style: none;
     border-radius: 4px;
-    margin: 4px;
+    margin: 4px;    
+}
+
+.delete:hover{
+    cursor: pointer;
+    -webkit-transition: color 0.2s; /* For Safari 3.1 to 6.0 */
+    transition: color 0.3s;
+    color: rgb(0, 0, 0);
 }
 
 h1.title{
-    color: #395F5D;
-    font-size: 24px;
+    color: rgb(0, 0, 0);
+    font-size: 36px;
     font-weight: bold;
 }
 
@@ -289,11 +299,13 @@ h1.subtitle{
     color: rgb(255, 255, 255);
     font-size: 12px;
     text-align: center;
-    
 }
 
-
-p.footer{margin: 5px;color: #FFF;font-weight: bold;}
+p.footer{
+    margin: 5px;
+    color: #FFF;
+    font-weight: bold;
+}
 
 div.login{
     max-width: 500px;
@@ -310,17 +322,26 @@ form.login{
     padding: 10px;
     background: rgba(28, 72, 70, 0.87);
 }
-img.logo-login{max-width: 200px;
-margin-top: 12.5%;
+img.logo-login{
+    max-width: 200px;
+    margin-top: 12.5%;
 }
-img.logo-login2{max-width: 200px;
-   
-    }
+img.logo-login2{
+    max-width: 200px;
+}
 form.login input{
     border-radius: 10px;
     height: 50px;
     color: rgba(28, 72, 70, 0.87);
 }
-.btn-login{background: rgba(28, 72, 70, 0.87);width: 100%;color: #FFF !important;font-weight: bold;font-size: 18px;}
-a.recuperar{color: rgba(28, 72, 70, 0.87);}
+.btn-login{
+    background: rgba(28, 72, 70, 0.87);
+    width: 100%;
+    color: #FFF !important;
+    font-weight: bold;
+    font-size: 18px;
+}
+a.recuperar{
+    color: rgba(28, 72, 70, 0.87);
+}
 
