--- a/projvacina/public/Assets/Painel/css/acl-painel.css
+++ b/projvacina/public/Assets/Painel/css/acl-painel.css
@@ -174,11 +174,13 @@ a.article:hover {
     margin: 40px;
     
 }
+
 .menu{
     background: rgba(25, 0, 138, 0.726);
     margin: 0px;
     padding: 0px;
 }
+
 ul.menu{
     list-style: none;
     width: 100%;
@@ -186,10 +188,12 @@ ul.menu{
     margin: 0px;
     padding: 12px;
 }
+
 ul.menu li{
     /* display: inline; */
     text-align: center;
 }
+
 /*ul.menu li a{};*/
 ul.menu li h1{
     font-size: 18px;
@@ -197,16 +201,19 @@ ul.menu li h1{
     color: rgb(255, 255, 255);
     font-weight: bold;
 }
+
 img.img-menu{
     max-width: 50px;
     padding: 5px 5px; 
 }
+
 img.img-submenu{
     border: 1px solid rgba(0, 17, 255, 0.472); 
     padding: 20px 20px; 
     border-radius: 1px;
     max-width: 80px;
 }
+
 a:hover{text-decoration: none;}
 
 .clear{clear: both;}
@@ -215,6 +222,7 @@ a:hover{text-decoration: none;}
 .actions{
     background: #3313e9a6;
 }
+
 a.add{
     background: rgba(9, 13, 236, 0.63);
     padding: 12px;
@@ -223,6 +231,7 @@ a.add{
     color: #FFF;
     border-radius: 4px;
 }
+
 form.form-search{
     float: left;
     margin: 10px;
@@ -236,6 +245,7 @@ ul.relatorios{
     list-style: none;
     margin: 10px 10px 10px;
 }
+
 ul.relatorios li a{
     background: rgba(253, 0, 0, 0.657);
     margin: 30px 70px ;
@@ -247,6 +257,7 @@ ul.relatorios li a{
     border-radius: 30px;
     
 }
+
 ul.relatorios li h1{
     color: #FFF;
     font-size: 20px;
@@ -254,12 +265,32 @@ ul.relatorios li h1{
     border-color: rgb(50, 0, 97);
 
 }
-p1{
+
+.p1{
     color: rgb(255, 255, 255);
     font-size: 12px;
     border: 3px;
     border-color: rgb(255, 0, 0);
 
+}
+
+/* Botão de adicionar */
+.add{
+    background: rgb(255, 255, 255);
+    /* Top, right, botton, left */
+    padding: 5px 7px 5px 7px;
+    margin: 5px;
+    color: #FFF;
+    border-radius: 4px;
+    color: rgb(0, 0, 0);
+}
+
+.add:hover{
+    background: rgb(0, 0, 0);
+    cursor: pointer;
+    -webkit-transition: color 0.2s; /* For Safari 3.1 to 6.0 */
+    transition: color 0.3s;
+    color: rgb(255, 255, 255);
 }
 
 /* Botão de editar */
