--- a/projvacina/public/Assets/Painel/css/acl-painel.css
+++ b/projvacina/public/Assets/Painel/css/acl-painel.css
@@ -218,7 +218,6 @@ a:hover{text-decoration: none;}
 
 .clear{clear: both;}
 
-
 .actions{
     background: #3313e9a6;
 }
@@ -274,12 +273,66 @@ ul.relatorios li h1{
 
 }
 
+/* Dose select */
+
+
+/* Carteira de vacinação */
+.myVaccineTable{
+    width: 100%;
+
+    background: #d6d6d6;
+}
+
+/* Primeiro header */
+.myVaccineTable .sup{
+    display: block;
+    position: relative;
+    width: 50%;
+    float: right;
+    padding-bottom: 15%;
+    line-height: 100%;
+    text-align: center;
+    z-index: 1;
+}
+
+.myVaccineTable .inf{
+    display: block;
+    position: relative;
+    width: 50%;
+    float: right;
+    padding-top: 15%;
+    line-height: 100%;
+    text-align: center;
+    z-index: 1;
+}
+
+.firstHeader::after{
+    /* content: ""; */
+    /* position: absolute;
+    z-index: 0;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255,255,255,.5); */
+
+    position: relative;
+    z-index: 1;
+    left: -61px;
+    width: 423px;
+    height: 1px;
+    background-color: #000;
+    transform: rotate(45deg);
+    /* background-size: cover; */
+    /* clip-path: polygon(100% 0%, 0% 0%, 0% 100%); */
+}
+
 /* Sidebar */
-@media (max-width: 768px) {
-    .nav > li {
+@media (max-width: 768px){
+    .nav > li{
         float:left;
     }
-    .nav.navbar-nav.navbar-left {
+    .nav.navbar-nav.navbar-left{
         float:left;
     }
     .nav.navbar-nav.navbar-middle{
