--- a/projvacina/public/Assets/Painel/css/acl-painel.css
+++ b/projvacina/public/Assets/Painel/css/acl-painel.css
@@ -270,17 +270,83 @@ ul.relatorios li h1{
     font-size: 12px;
     border: 3px;
     border-color: rgb(255, 0, 0);
-
 }
 
-/* Dose select */
+/* Cabeçalho carteira vacinação */
+.headersTopMyVaccine {
+    background: #09be54;
+}
 
+.headersLeftMyVaccine {
+    background: #069943;
+}
+
+/* Selo Vacina */
+.stamp {
+    font-family: 'Swanky and Moo Moo', cursive;
+    font-size: 20px;
+    text-align: center;
+    margin-top: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 20px;
+    position: relative;
+    width: 250px;
+    height: 50px;
+    background: #08e464;
+    color: #072072;
+    -webkit-filter: drop-shadow(3px 3px 1px black);
+    filter: drop-shadow(0px 0px 5px white);
+}
+.stamp:before {
+    position: absolute;
+    top: -20px;
+    display: block;
+    content: "";
+    background: radial-gradient(circle, transparent 7px, #08e464 8px);
+    background-size: 50px 40px;
+    background-position: -20px -20px;
+    width: 100%;
+    height: 40px;
+    z-index: -1;
+}
+.stamp:after {
+    position: absolute;
+    bottom: -20px;
+    content: "";
+    display: block;
+    background: radial-gradient(circle, transparent 7px, #08e464 8px);
+    background-size: 50px 40px;
+    background-position: -20px -20px;
+    width: 100%;
+    height: 40px;
+    z-index: -1;
+}
+
+/* .stamp2 {
+    font-family: 'Swanky and Moo Moo', cursive;
+    font-size: 25px;
+      color: #555;
+      border: 0.25rem solid #555;
+      display: inline-block;
+      padding: 0.25rem 1rem;
+      border-radius: 1rem;
+      -webkit-mask-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/8399/grunge.png');
+    -webkit-mask-size: 944px 604px;
+    mix-blend-mode: multiply;
+  }
+
+.is-approved {
+	color: #0A9928;
+	border: 0.5rem solid #0A9928;
+	-webkit-mask-position: 13rem 6rem;
+  border-radius: 0;
+}  */
 
 /* Carteira de vacinação */
 .myVaccineTable{
     width: 100%;
-
-    background: #d6d6d6;
+    background: #eeeeee;
 }
 
 /* Primeiro header */
