--- a/projvacina/public/Assets/Painel/css/acl-painel.css
+++ b/projvacina/public/Assets/Painel/css/acl-painel.css
@@ -491,6 +491,17 @@ ul.relatorios li h1{
     color: rgb(0, 0, 0);
 }
 
+.delete:disabled{
+    cursor: default;
+    border: 1px solid #999999;
+    background-color: #cccccc;
+    color: #666666;
+    padding: 2px 7px 2px 7px;
+    border-style: none;
+    border-radius: 4px;
+    margin: 4px;
+}
+
 h1.title{
     color: rgb(0, 0, 0);
     font-size: 36px;
