--- a/projvacina/public/Assets/Painel/css/login.css
+++ b/projvacina/public/Assets/Painel/css/login.css
@@ -20,7 +20,7 @@ html,body{
     height: 400px;
     margin-top: auto;
     margin-bottom: auto;
-    width: 430px;
+    width: 470px;
 }
 
 .card-header, .card-footer{
@@ -54,7 +54,7 @@ html,body{
 
 .input-group-prepend span{
     width: 50px;
-    background-color: #0be064e3;
+    background-color: #777777;
     color: rgb(255, 255, 255);
     border:0 !important;
 }
@@ -77,7 +77,7 @@ input:focus{
 
 .login_btn{
     color: rgb(255, 255, 255);
-    background-color: #0be064e3;
+    background-color: #777777;
     width: 100px;
 }
 
